# split_pacbio_bam_by_primer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json  split_pacbio_bam.sh
include/: Ssw.h  common.hpp  config.h  kernel_color.hpp  policies.hpp  threads.hpp  version.h.in  version.inc
include/private/ssw/: ssw_impl.h
src/: Ssw.cpp  common.cpp  main.cpp
src/impl/ssw/: ssw_impl.c
